2009-09-30  Alvin Delagon  <adelagon@flumotion.com>

	reviewed by: Zaheer Abbas Merali

	* flumotion/extern/log/log.py:
	* flumotion/extern/log/test_log.py:
	Add support for non-ascii characters in the log system
	Fixes #1283.

2009-09-28  Alvin Delagon  <adelagon@flumotion.com>

	reviewed by: Jan Urbanski

	* flumotion/component/component.py:
	* flumotion/component/consumers/disker/disker.py:
	Stop the CPU and Memory pollers when there is no uiState observers.
	Closes #1363.

2009-09-22  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/admin/assistant/save.py:
	Keep track of existing muxers so when adding a new streamer there is no
	need to duplicate them in the flow and another can be reused.
	* flumotion/admin/gtk/adminwindow.py:
	Refractor _runAddNewFormatAssistant used now to add a new streamer too
	and add a new menu to add a new streamer to the flow using the
	existing muxers.
	* flumotion/admin/gtk/basesteps.py:
	Allow having a consumer step to be in a wizard without production steps
	* flumotion/scenario/live/wizard_gtk.py:
	Let the wizard work in 'addstreamer' mode. When an existing muxer is to
	be used notify the saver, create a new one otherwise.
	* flumotion/scenario/steps/conversionsteps.py:
	Add a SelectFormatStep that shows the existing muxers (formats) to use
	with the new streamer.
	* flumotion/scenario/steps/httpstreamersteps.py:
	Add a HTTPGenericStep for when it has not been possible to determine
	the type of a muxer/streamer. Uѕed when component names have not been
	generated by the admin.
	* flumotion/ui/wizard.py:
	Allow having instanced step sections as well as classes
	Closes #997

2009-09-22  Josep Joan Ribas  <jribas@flumotion.com>

	* flumotion/ui/ondemandbrowser.py:
	Context menu not shown if kiwi version < 1.9.22

2009-09-22  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Arek Korbik/Xavi Martinez

	* flumotion/common/errors.py:
	* flumotion/common/vfs.py:
	Improve exception handling.