@@ -1,3 +1,9 @@
+2009-10-01  Jan Urbanski  <jurbanski@flumotion.com>
+
+	* flumotion/ui/fvumeter.py:
+	Create a black graphic context instead of using the one from the style.
+	Fixes a crash on recent Debian machines.
+
 2009-09-30  Alvin Delagon  <adelagon@flumotion.com>
 
 	reviewed by: Zaheer Abbas Merali
